...
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Fragment_Account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_drawer_main_account" />
        <item
            android:id="@+id/Fragment_Card"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/menu_drawer_main_card" />
        <item
            android:id="@+id/Fragment_Bank_Account"
            android:icon="@drawable/ic_bank"
            android:title="@string/menu_drawer_main_bank_account" />
        <item
            android:id="@+id/Fragment_Device"
            android:icon="@drawable/ic_device"
            android:title="@string/menu_drawer_main_device" />
    </group>

    <item android:title="@string/menu_drawer_subtitle_tools">
        <menu>
...
        </menu>
    </item>

    <item android:title="@string/menu_drawer_subtitle_user">
        <menu>
            <item
                android:id="@+id/Fragment_Profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_drawer_main_profile" />
        </menu>
    </item>

    <item android:title="@string/menu_drawer_subtitle_others">
        <menu>
            <item
                android:id="@+id/Fragment_Settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_drawer_main_settings" />
            <item
                android:id="@+id/Fragment_About"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_drawer_main_about" />
        </menu>
    </item>
</menu>
