...

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/Drawer_Main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <!--
...
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorOnSurface"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <TextView
                        android:id="@+id/Toolbar_Main_Title"
                        style="@style/Locky.Text.Title6.Toolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_name" />

...
        <!--
         ****************************************************
         **** This is the Navigation View for the Drawer ****
         ****************************************************
         -->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/Navigation_View"
            style="@style/Locky.Widget.Custom.NavigationView.Drawer"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:clipToPadding="false"
            android:fitsSystemWindows="true"
...
