...
        <variable
            name="ViewModel"
            type="com.th3pl4gu3.locky_offline.ui.main.main.card.CardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layout_Fragment_Card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOnSurface">


        <!--
...
